force-app/main/default/objects/Lead/fields/Age_of_Home__c.field-meta.xml
<CustomField>
    <fullName>Age_of_Home__c</fullName>
    <inlineHelpText>What year was your home built?</inlineHelpText>
    <label>Home Year of Construction</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>