force-app/main/default/objects/Lead/fields/Current_Plan_Expiration__c.field-meta.xml
<CustomField>
    <fullName>Current_Plan_Expiration__c</fullName>
    <description>When does the customer&#39;s current contract expire?</description>
    <inlineHelpText>When does the customer&#39;s current contract expire?</inlineHelpText>
    <label>Current Electric Contract Expiration</label>
    <type>Date</type>
</CustomField>