force-app/main/default/objects/Lead/fields/Current_REP__c.field-meta.xml
<CustomField>
    <fullName>Current_REP__c</fullName>
    <label>Current REP</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Abacus</fullName>
            </value>
            <value>
                <fullName>Ambit</fullName>
            </value>
            <value>
                <fullName>Amigo</fullName>
            </value>
            <value>
                <fullName>Bounce</fullName>
            </value>
            <value>
                <fullName>Brilliant</fullName>
            </value>
            <value>
                <fullName>Champion</fullName>
            </value>
            <value>
                <fullName>Cirro</fullName>
            </value>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>Dynowatt</fullName>
            </value>
            <value>
                <fullName>Energy Plus</fullName>
            </value>
            <value>
                <fullName>EPCOT</fullName>
            </value>
            <value>
                <fullName>Gexa</fullName>
            </value>
            <value>
                <fullName>Green Mountain</fullName>
            </value>
            <value>
                <fullName>Just Energy</fullName>
            </value>
            <value>
                <fullName>Kinetic</fullName>
            </value>
            <value>
                <fullName>Mega</fullName>
            </value>
            <value>
                <fullName>MX</fullName>
            </value>
            <value>
                <fullName>Payless</fullName>
            </value>
            <value>
                <fullName>Potentia</fullName>
            </value>
            <value>
                <fullName>Reliant</fullName>
            </value>
            <value>
                <fullName>Simple</fullName>
            </value>
            <value>
                <fullName>Southwest Power &amp; Light</fullName>
            </value>
            <value>
                <fullName>Spark</fullName>
            </value>
            <value>
                <fullName>StarTex</fullName>
            </value>
            <value>
                <fullName>Stream</fullName>
            </value>
            <value>
                <fullName>Tara</fullName>
            </value>
            <value>
                <fullName>TXU</fullName>
            </value>
            <value>
                <fullName>YEP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>