force-app/main/default/objects/Lead/fields/DM_HSP_Interest__c.field-meta.xml
<CustomField>
    <fullName>DM_HSP_Interest__c</fullName>
    <description>DM HSP Interest are items the lead has clicked but may or may not ordered</description>
    <label>DM HSP Interests</label>
    <type>TextArea</type>
</CustomField>