force-app/main/default/objects/Lead/fields/DM_HSP_Ordered__c.field-meta.xml
<CustomField>
    <fullName>DM_HSP_Ordered__c</fullName>
    <defaultValue>false</defaultValue>
    <description>DM HSP Items that have been ordered</description>
    <label>DM HSP Ordered</label>
    <type>Checkbox</type>
</CustomField>