force-app/main/default/objects/Lead/fields/DM_Last_Completed_Step__c.field-meta.xml
<CustomField>
    <fullName>DM_Last_Completed_Step__c</fullName>
    <label>DM Last Completed Step</label>
    <type>TextArea</type>
</CustomField>