force-app/main/default/objects/Lead/fields/DM_MAO_Registration__c.field-meta.xml
<CustomField>
    <fullName>DM_MAO_Registration__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if the lead signed up for MAO registration</description>
    <label>DM MAO Registered</label>
    <type>Checkbox</type>
</CustomField>