force-app/main/default/objects/Lead/fields/DM_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>DM_Timestamp__c</fullName>
    <description>Time and date the DM was submitted</description>
    <label>DM Timestamp</label>
    <type>Time</type>
</CustomField>