force-app/main/default/objects/Lead/fields/Language__c.field-meta.xml
<CustomField>
    <fullName>Language__c</fullName>
    <description>What language the user speaks</description>
    <inlineHelpText>What language the user speaks</inlineHelpText>
    <label>Language</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>English</fullName>
                <default>true</default>
                <label>English</label>
            </value>
            <value>
                <fullName>Spanish</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>