force-app/main/default/objects/Lead/fields/MES_Lead__c.field-meta.xml
<CustomField>
    <fullName>MES_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MES Lead</label>
    <type>Checkbox</type>
</CustomField>