force-app/main/default/objects/Lead/fields/Meter_Data_Permission__c.field-meta.xml
<CustomField>
    <fullName>Meter_Data_Permission__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Meter Data Permission</label>
    <type>Checkbox</type>
</CustomField>