force-app/main/default/objects/Lead/fields/SessionStore__c.field-meta.xml
<CustomField>
    <fullName>SessionStore__c</fullName>
    <description>Session store for keeping track of user data</description>
    <label>SessionStore</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>