force-app/main/default/objects/Lead/fields/Switch_Date__c.field-meta.xml
<CustomField>
    <fullName>Switch_Date__c</fullName>
    <description>Date to base switch reminder</description>
    <label>Switch Date</label>
    <type>Date</type>
</CustomField>