force-app/main/default/objects/Lead/fields/Valid_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Valid_Zip_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This zip code has validation rules</description>
    <inlineHelpText>This zip code has validation rules</inlineHelpText>
    <label>Valid Zip Code</label>
    <referenceTo>ValidZipCode__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>