force-app/main/default/objects/Lead/fields/workflow_timer__c.field-meta.xml
<CustomField>
    <fullName>workflow_timer__c</fullName>
    <description>trigger workflows from this timer</description>
    <label>workflow timer</label>
    <type>DateTime</type>
</CustomField>