force-app/main/default/objects/Lead/listViews/Today_s_Digital_Move_Leads.listView-meta.xml
<ListView>
    <fullName>Today_s_Digital_Move_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>LEAD.STREET</columns>
    <columns>DM_Last_Completed_Step__c</columns>
    <columns>DM_Call_Ahead__c</columns>
    <columns>DM_HSP_Interest__c</columns>
    <columns>DM_HSP_Ordered__c</columns>
    <columns>DM_HSP_Plans__c</columns>
    <columns>DM_MAO_Registration__c</columns>
    <columns>DM_TC_Link__c</columns>
    <columns>DM_Timestamp__c</columns>
    <columns>LEAD.STATUS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.LEAD_SOURCE</field>
        <operation>contains</operation>
        <value>digital-move</value>
    </filters>
    <filters>
        <field>LEAD.CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Today&#39;s Digital Move Leads</label>
    <language>en_US</language>
    <sharedTo>
        <group>Administrators_System</group>
    </sharedTo>
</ListView>